--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya P J</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -13,11 +13,18 @@
     <header>
         <ul class="navbar">
             <li><a href="/">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
+            <li><a href="pages/projects.html">Projects</a></li>
+            <li><a href="pages/about.html">About Me</a></li>
+            <li><a href="pages/contact.html">Contact Me</a></li>
         </ul>
     </header>
+    <h1>About Me</h1>
+    <div class="about-me">
+        <div style="padding-bottom: 20px;">Hi, I'm Aditya P J</div>
+        <div style="padding-bottom: 20px;">I am a first year Computer Science student from IIT Palakkad. </div>
+        <div style="padding-bottom: 20px;">Skills: HTML, CSS, Javascript, Flask, Flutter, python, C++</div>
+        <div>Interested in becoming a software Developer</div>
+    </div>
     
     <script href="index.js"></script>
 </body>
