--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya P J</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -18,15 +18,21 @@
             <li><a href="pages/contact.html">Contact Me</a></li>
         </ul>
     </header>
-    <section class="hero">
-        <div class="intro">
-            <div id="hi">Hi, I'm Aditya P J</div>
-            <div id="pos">I'm a Computer Science student and aspiring Software Developer</div>
+    <h1>Contact Form</h1>
+    <form action="">
+        <div class="form-input">
+            <label for="name">Name</label>
+            <input id="name" placeholder="John Doe" type="text">
         </div>
-        <div class="image">
-            <img id="avatar" src="images/avatar.jpg" alt="avatar">
+        <div class="form-input">
+            <label for="email">Email</label>
+            <input id="email" placeholder="johndoe@example.com" type="email">
         </div>
-    </section>
+        <div class="form-input">
+            <label for="message">Message</label>
+            <textarea id="message" placeholder="Enter your message...">
+        </div>
+    </form>
     <script href="index.js"></script>
 </body>
 </html>
