--- a/index.html
+++ b/index.html
@@ -18,15 +18,25 @@
             <li><a href="pages/contact.html">Contact Me</a></li>
         </ul>
     </header>
+    <button class="dropdown" onclick="togglebar();">&#9776;</button>
+    <div class="menu" id="hambutton">
+        <ul class="menu_ul">
+            <li class="menu_li"><a href="/">Home</a></li>
+            <li class="menu_li"><a href="pages/projects.html">Projects</a></li>
+            <li class="menu_li"><a href="pages/about.html">About Me</a></li>
+            <li class="menu_li"><a href="pages/contact.html">Contact Me</a></li>
+        </ul>
+    </div>
     <section class="hero">
+        <div class="image">
+            <img id="avatar" src="images/avatar.jpg" alt="avatar">
+        </div>
         <div class="intro">
             <div id="hi">Hi, I'm Aditya P J</div>
             <div id="pos">I'm a Computer Science student and aspiring Software Developer</div>
         </div>
-        <div class="image">
-            <img id="avatar" src="images/avatar.jpg" alt="avatar">
-        </div>
+        
     </section>
-    <script href="index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
