--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <ul class="navbar">
-            <li><a href="/">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="pages/projects.html">Projects</a></li>
             <li><a href="pages/about.html">About Me</a></li>
             <li><a href="pages/contact.html">Contact Me</a></li>
@@ -21,7 +21,7 @@
     <button class="dropdown" onclick="togglebar();">&#9776;</button>
     <div class="menu" id="hambutton">
         <ul class="menu_ul">
-            <li class="menu_li"><a href="/">Home</a></li>
+            <li class="menu_li"><a href="index.html">Home</a></li>
             <li class="menu_li"><a href="pages/projects.html">Projects</a></li>
             <li class="menu_li"><a href="pages/about.html">About Me</a></li>
             <li class="menu_li"><a href="pages/contact.html">Contact Me</a></li>
