--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <ul class="navbar">
-            <li><a href="/">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="contact.html">Contact Me</a></li>
@@ -21,7 +21,7 @@
     <button class="dropdown" onclick="togglebar();">&#9776;</button>
     <div class="menu" id="hambutton">
         <ul class="menu_ul">
-            <li class="menu_li"><a href="/">Home</a></li>
+            <li class="menu_li"><a href="../index.html">Home</a></li>
             <li class="menu_li"><a href="projects.html">Projects</a></li>
             <li class="menu_li"><a href="about.html">About Me</a></li>
             <li class="menu_li"><a href="contact.html">Contact Me</a></li>
