--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
             <li><a href="pages/projects.html">Projects</a></li>
-            <li><a href="pages/about.html">About Me</a></li>
-            <li><a href="pages/contact.html">Contact Me</a></li>
+            <li><a href="pages/certifications_and_achievements.html">Certifications and Achievements</a></li>
         </ul>
     </header>
     <button class="dropdown" onclick="togglebar();">&#9776;</button>
@@ -23,8 +22,7 @@
         <ul class="menu_ul">
             <li class="menu_li"><a href="index.html">Home</a></li>
             <li class="menu_li"><a href="pages/projects.html">Projects</a></li>
-            <li class="menu_li"><a href="pages/about.html">About Me</a></li>
-            <li class="menu_li"><a href="pages/contact.html">Contact Me</a></li>
+            <li class="menu_li"><a href="pages/certifications_and_achievements.html">Certifications and Achievements</a></li>
         </ul>
     </div>
     <section class="hero">
