--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,8 +14,7 @@
         <ul class="navbar">
             <li><a href="../index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
+            <li><a href="certifications_and_achievements.html">Certifications and Achievements</a></li>
         </ul>
     </header>
     <button class="dropdown" onclick="togglebar();">&#9776;</button>
@@ -23,19 +22,46 @@
         <ul class="menu_ul">
             <li class="menu_li"><a href="../index.html">Home</a></li>
             <li class="menu_li"><a href="projects.html">Projects</a></li>
-            <li class="menu_li"><a href="about.html">About Me</a></li>
-            <li class="menu_li"><a href="contact.html">Contact Me</a></li>
+            <li class="menu_li"><a href="certifications_and_achievements.html">Certifications and Achievements</a></li>
         </ul>
     </div>
     <h1>My Projects</h1>
     <section class="cards">
         <div class="card">
-            <img src="../images/gym_website.png" alt="project 1" width="300px">
+            <img src="../images/nike_clone_img.png" alt="project 1" width="300px">
             <div class="card-body">
-                <div class="card-title">Gym website</div>
+                <div class="card-title">Nike Clone</div>
                 <div class="card-description">
-                    A simple gym website built with HTML and CSS.
+                    A clone of the Nike Products Page.
                 </div>
+                <a href="https://github.com/Aditya-pj/nike-clone">GitHub Repository</a><br>
+                <!--deploy this!!!-->
+                <a href="#">Link to website</a>
+                
+            </div>
+        </div>
+        
+        <div class="card">
+            <img src="../images/learning_website.png" alt="project 1" width="300px">
+            <div class="card-body">
+                <div class="card-title">Learning Website</div>
+                <div class="card-description">
+                    A learning website built using HTML,CSS,Flask and Jinja. Users can login as Student or Teacher and can add/delete or favourite coures.
+                </div>
+                <a href="https://github.com/aadi-sun/learning-app">GitHub Repository</a><br>
+                <!-- deploy this -->
+                <a href="#">Link to website</a>
+            </div>
+        </div>
+        <div class="card">
+            <img src="../images/React_weather_app.png" alt="project 1" width="300px">
+            <div class="card-body">
+                <div class="card-title">Weather App with React</div>
+                <div class="card-description">
+                    A weather app built using React. It displays weather data for any city entered by the user.
+                </div>
+                <a href="https://github.com/Aditya-pj/react-weather-app">GitHub Repository</a><br>
+                <a href="https://aditya-pj.github.io/React-weather-app/">Link to website</a>
             </div>
         </div>
         <div class="card">
@@ -45,24 +71,8 @@
                 <div class="card-description">
                     A weather app built using Flutter.
                 </div>
-            </div>
-        </div>
-        <div class="card">
-            <img src="../images/learning_website.png" alt="project 1" width="300px">
-            <div class="card-body">
-                <div class="card-title">Learning Website</div>
-                <div class="card-description">
-                    A learning website built using HTML,CSS,Flask and Jinja. Users can login as Student or Teacher and can add/delete or favourite coures.
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <img src="../images/rock_paper.png" alt="project 1" width="300px">
-            <div class="card-body">
-                <div class="card-title">Rock Paper Scissors Game</div>
-                <div class="card-description">
-                    A simple Rock Paper Scissors game built with HTML, CSS and Javascript. 
-                </div>
+                <a href="">GitHub Repository</a><br>
+                <a href="">Link to website</a>
             </div>
         </div>
 
